[+ added, - removed, * changed ]
   * (04/Dec/2014) Added parameter --mrnet to mrnapp-config to query the installation path for MRNet
                   Updated obsolete macro AM_CONFIG_HEADER to AC_CONFIG_HEADERS
                   Version upgrade to 1.0.3
   * (22/Sep/2014) Version upgrade to 1.0.2
   * (22/Sep/2014) Added configuration error when MRNet is not found in the system
   * (22/Sep/2014) Added 'boost.m4' to check the existence of Boost Shared Ptr header
   * (22/Sep/2014) Added '--libdir' and '--libtool-rpath' to the mrnapp-config script. 
   * (22/Sep/2014) Added 'BOOST_CPPFLAGS' to 'libBackEnd' and 'libFrontEnd' CXXFLAGS.
   * (15/Sep/2014) Fixed MRNet include check in the building system	
   * (06/Sep/2013) Fixed missing files in the distribution
   * (06/Sep/2013) Fixed bug in the bootstrap script (pointing to wrong paths)
   * (04/Sep/2013) Set the control stream to blocking behavior by default
   * (16/Jul/2013) Upgraded version to v1.01.
   * (16/Jul/2013) Removed delete of the network at BackEnd::Shutdown() that caused double-free corruption.
   * (16/Jul/2013) Added boolean argument to WhoAmI() to get either the logical ID of the back-ends (0..N-1) or the real network ID (1000000..1000000+N-1).
   * (07/Mar/2013) Applied workaround for a problem detected in the control stream (the root does not receive all ACKs).
                   Changed the built-in filter TFILTER_SUM and SWAITFORALL into TFILTER_NULL and SDONTWAIT, and then receiving from all back-ends.
                   This behavior can be switched with the define CONTROL_STREAM_BLOCKING in MRNetApp.h.
   * (05/Feb/2013) Added two callback parameters to the BE->Loop() call to invoke a handler
                   before and after a protocol is run.
   * (05/Feb/2013) Added an I/O parameter to the FE->Dispatch() call to return 
                   the rc of the protocol that is run. 
   * (30/Jan/2013) Separated the Init() and Connect() routines in both parts, 